crates/tok-parser/src/parser.rs
use crate::ast::*;
/// Recursive descent parser for the Tok language.
///
/// Converts a flat token stream from tok-lexer into an AST.
/// Handles all 9 phases of the language including:
/// - Expressions with full operator precedence
/// - Functions, lambdas, closures
/// - Control flow: ternary, match, loops
/// - Arrays, maps, tuples
/// - String interpolation
/// - Pipes, filters, reduce
/// - Error handling: ?^, ??, .?
/// - Modules/imports
/// - Concurrency: go, channels, select, pmap
use tok_lexer::Token;

#[derive(Debug, Clone)]
pub struct ParseError {
    pub msg: String,
    pub pos: usize,
}

impl std::fmt::Display for ParseError {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        write!(f, "parse error at token {}: {}", self.pos, self.msg)
    }
}

/// Convenience function to parse a token stream into a Program.
pub fn parse(tokens: Vec<Token>) -> Result<Program, ParseError> {
    let mut parser = Parser::new(tokens);
    parser.parse()
}

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Parser { tokens, pos: 0 }
    }

    // ---------------------------------------------------------------
    // Helpers
    // ---------------------------------------------------------------

    fn peek(&self) -> &Token {
        self.tokens.get(self.pos).unwrap_or(&Token::Eof)
    }

    fn peek_at(&self, offset: usize) -> &Token {
        self.tokens.get(self.pos + offset).unwrap_or(&Token::Eof)
    }

    fn advance(&mut self) -> Token {
        let tok = self.tokens.get(self.pos).cloned().unwrap_or(Token::Eof);
        if !matches!(tok, Token::Eof) {
            self.pos += 1;
        }
        tok
    }

    fn at(&self, token: &Token) -> bool {
        std::mem::discriminant(self.peek()) == std::mem::discriminant(token)
    }

    fn at_eof(&self) -> bool {
        matches!(self.peek(), Token::Eof)
    }

    fn expect(&mut self, expected: &Token) -> Result<Token, ParseError> {
        if self.at(expected) {
            Ok(self.advance())
        } else {
            Err(self.error(format!("expected {:?}, found {:?}", expected, self.peek())))
        }
    }

    fn error(&self, msg: String) -> ParseError {
        ParseError { msg, pos: self.pos }
    }

    fn skip_newlines(&mut self) {
        while matches!(self.peek(), Token::Newline) {
            self.advance();
        }
    }

    /// Check if the next token can start an expression.
    fn can_start_expr(&self) -> bool {
        matches!(
            self.peek(),
            Token::Int(_)
                | Token::Float(_)
                | Token::Str(_)
                | Token::RawStr(_)
                | Token::StringStart(_)
                | Token::True
                | Token::False
                | Token::Nil
                | Token::Ident(_)
                | Token::Func
                | Token::LParen
                | Token::LBracket
                | Token::LBrace
                | Token::Backslash
                | Token::Minus
                | Token::Bang
                | Token::Hash
                | Token::ArrowLeft
                | Token::Tilde
                | Token::At
                | Token::Caret
                | Token::Go
                | Token::Sel
                | Token::QuestionEq
        )
    }

    /// Check if the current position starts a map literal.
    /// We're positioned at `{`. Look ahead (past newlines) for `IDENT:` or `STRING:`.
    /// An empty `{}` is also a map literal.
    fn is_map_literal(&self) -> bool {
        let mut look = self.pos + 1; // past the `{`
                                     // skip newlines
        while look < self.tokens.len() && matches!(self.tokens[look], Token::Newline) {
            look += 1;
        }
        // Empty map: `{}`
        if look < self.tokens.len() && matches!(self.tokens[look], Token::RBrace) {
            return true;
        }
        // Check for `IDENT :` or `STRING :` pattern
        if look < self.tokens.len() {
            match &self.tokens[look] {
                Token::Ident(_) | Token::Str(_) | Token::RawStr(_) => {
                    let next = look + 1;
                    if next < self.tokens.len() && matches!(self.tokens[next], Token::Colon) {
                        return true;
                    }
                }
                _ => {}
            }
        }
        false
    }

    /// Check if the current position is a tuple destructure: `IDENT IDENT+ =`
    fn is_tuple_destructure(&self) -> bool {
        // We need at least: ident ident ... =
        // The first ident is at self.pos. We need at least one more ident then =.
        if !matches!(self.peek(), Token::Ident(_)) {
            return false;
        }
        let mut look = self.pos + 1;
        // Count consecutive idents (and _)
        let mut ident_count = 1;
        while look < self.tokens.len() {
            match &self.tokens[look] {
                Token::Ident(_) => {
                    ident_count += 1;
                    look += 1;
                }
                _ => break,
            }
        }
        // Need at least 2 identifiers, then `=`
        if ident_count >= 2 && look < self.tokens.len() && matches!(self.tokens[look], Token::Eq) {
            return true;
        }
        false
    }

    /// Check if current position is a map destructure: `{ident ident...} =`
    fn is_map_destructure(&self) -> bool {
        if !matches!(self.peek(), Token::LBrace) {
            return false;
        }
        let mut look = self.pos + 1;
        // Check for ident+ then }
        let mut has_idents = false;
        while look < self.tokens.len() {
            match &self.tokens[look] {
                Token::Ident(_) => {
                    has_idents = true;
                    look += 1;
                }
                Token::Newline => {
                    look += 1;
                }
                Token::RBrace => {
                    look += 1;
                    break;
                }
                _ => return false,
            }
        }
        if !has_idents {
            return false;
        }
        // After `}`, check for `=`
        if look < self.tokens.len() && matches!(self.tokens[look], Token::Eq) {
            return true;
        }
        false
    }

    /// Check if current position is an array destructure: `[ident ..ident] =`
    fn is_array_destructure(&self) -> bool {
        if !matches!(self.peek(), Token::LBracket) {
            return false;
        }
        let mut look = self.pos + 1;
        // Skip newlines
        while look < self.tokens.len() && matches!(self.tokens[look], Token::Newline) {
            look += 1;
        }
        // Expect ident
        if look >= self.tokens.len() || !matches!(self.tokens[look], Token::Ident(_)) {
            return false;
        }
        look += 1;
        // Skip newlines
        while look < self.tokens.len() && matches!(self.tokens[look], Token::Newline) {
            look += 1;
        }
        // Expect `..`
        if look >= self.tokens.len() || !matches!(self.tokens[look], Token::DotDot) {
            return false;
        }
        look += 1;
        // Expect ident
        if look >= self.tokens.len() || !matches!(self.tokens[look], Token::Ident(_)) {
            return false;
        }
        look += 1;
        // Skip newlines
        while look < self.tokens.len() && matches!(self.tokens[look], Token::Newline) {
            look += 1;
        }
        // Expect `]`
        if look >= self.tokens.len() || !matches!(self.tokens[look], Token::RBracket) {
            return false;
        }
        look += 1;
        // Expect `=`
        if look >= self.tokens.len() || !matches!(self.tokens[look], Token::Eq) {
            return false;
        }
        true
    }

    /// Check if current position is assignment: `IDENT = ...` (not `==`)
    fn is_simple_assign(&self) -> bool {
        if !matches!(self.peek(), Token::Ident(_)) {
            return false;
        }
        // Check for : (typed assign) or = (plain assign)
        let next = self.peek_at(1);
        matches!(next, Token::Eq) || matches!(next, Token::Colon)
    }

    /// Check if current position is a compound assignment: `IDENT op=`
    fn is_compound_assign(&self) -> bool {
        if !matches!(self.peek(), Token::Ident(_)) {
            return false;
        }
        matches!(
            self.peek_at(1),
            Token::PlusEq
                | Token::MinusEq
                | Token::StarEq
                | Token::SlashEq
                | Token::PercentEq
                | Token::StarStarEq
                | Token::LtLtEq
        )
    }

    /// Check if current position is member assign: `IDENT . IDENT =` or deeper chains.
    /// Also need to handle `IDENT . IDENT op=` for compound member assign.
    /// And `IDENT [ expr ] =` for index assign.
    fn is_member_or_index_assign(&self) -> bool {
        if !matches!(self.peek(), Token::Ident(_)) {
            return false;
        }
        let next = self.peek_at(1);
        matches!(next, Token::Dot | Token::LBracket)
    }

    /// Try to parse the left-hand side of a member/index assignment and determine
    /// what kind of assignment it is. Returns None if it's not an assignment.
    fn try_member_index_assign(&mut self) -> Result<Option<Stmt>, ParseError> {
        // Save position
        let saved_pos = self.pos;

        // Parse the target expression (which may be `ident`, `ident.field`, `ident[idx]`, etc.)
        // We parse a postfix expression, then check if it's followed by `=` or `op=`.
        let expr = self.parse_postfix()?;

        // Check what follows
        match self.peek() {
            Token::Eq => {
                self.advance(); // consume =
                let value = self.parse_expr()?;
                match expr {
                    Expr::Member {
                        expr: target,
                        field,
                    } => Ok(Some(Stmt::MemberAssign {
                        target: *target,
                        field,
                        value,
                    })),
                    Expr::OptionalChain {
                        expr: target,
                        field,
                    } => Ok(Some(Stmt::MemberAssign {
                        target: *target,
                        field,
                        value,
                    })),
                    Expr::Index {
                        expr: target,
                        index,
                    } => Ok(Some(Stmt::IndexAssign {
                        target: *target,
                        index: *index,
                        value,
                    })),
                    _ => {
                        // Not a valid assignment target, restore
                        self.pos = saved_pos;
                        Ok(None)
                    }
                }
            }
            Token::PlusEq
            | Token::MinusEq
            | Token::StarEq
            | Token::SlashEq
            | Token::PercentEq
            | Token::StarStarEq
            | Token::LtLtEq => {
                let tok = self.advance();
                let op = self.compound_op_to_binop(&tok);
                let value = self.parse_expr()?;
                match expr {
                    Expr::Member {
                        expr: target,
                        field,
                    } => Ok(Some(Stmt::CompoundMemberAssign {
                        target: *target,
                        field,
                        op,
                        value,
                    })),
                    Expr::Index {
                        expr: target,
                        index,
                    } => Ok(Some(Stmt::CompoundIndexAssign {
                        target: *target,
                        index: *index,
                        op,
                        value,
                    })),
                    _ => {
                        self.pos = saved_pos;
                        Ok(None)
                    }
                }
            }
            _ => {
                // Not an assignment, restore and return None
                self.pos = saved_pos;
                Ok(None)
            }
        }
    }

    fn compound_op_to_binop(&self, tok: &Token) -> BinOp {
        match tok {
            Token::PlusEq => BinOp::Add,
            Token::MinusEq => BinOp::Sub,
            Token::StarEq => BinOp::Mul,
            Token::SlashEq => BinOp::Div,
            Token::PercentEq => BinOp::Mod,
            Token::StarStarEq => BinOp::Pow,
            Token::LtLtEq => BinOp::Append,
            _ => unreachable!(),
        }
    }

    // ---------------------------------------------------------------
    // Top-level
    // ---------------------------------------------------------------

    pub fn parse(&mut self) -> Result<Program, ParseError> {
        let mut stmts = Vec::new();
        self.skip_newlines();
        while !self.at_eof() {
            let stmt = self.parse_stmt()?;
            stmts.push(stmt);
            self.skip_newlines();
        }
        Ok(stmts)
    }

    // ---------------------------------------------------------------
    // Statement parsing
    // ---------------------------------------------------------------

    fn parse_stmt(&mut self) -> Result<Stmt, ParseError> {
        self.skip_newlines();

        match self.peek().clone() {
            // Function declaration: f name(...)
            Token::Func => {
                return self.parse_func_decl();
            }

            // Bare import: @"path" (at statement level, not assigned to anything)
            Token::At => {
                // Check if this is a bare import: @"string" at statement level
                // (not @"path" used as an expression in assignment)
                // We need to check if this is `@"path"` by itself (not `name = @"path"`)
                // Since we reach here, At is the first token of the statement.
                // A bare import is: @"path" followed by newline/eof/;
                // But `(@"path").field` would parse as expression. Let's check.
                // If it's `@"str"` followed by a newline/eof, it's a bare import.
                if matches!(self.peek_at(1), Token::Str(_) | Token::RawStr(_)) {
                    let saved = self.pos;
                    self.advance(); // consume @
                    let path = match self.advance() {
                        Token::Str(s) | Token::RawStr(s) => s,
                        _ => unreachable!(),
                    };
                    // If followed by newline, eof, or nothing else meaningful, it's bare import
                    if matches!(self.peek(), Token::Newline | Token::Eof) || !self.can_start_expr()
                    {
                        return Ok(Stmt::Import(path));
                    }
                    // Otherwise restore and parse as expression
                    self.pos = saved;
                }
            }

            // Early return: ^expr or bare ^
            Token::Caret => {
                self.advance();
                if self.can_start_expr() {
                    let expr = self.parse_expr()?;
                    return Ok(Stmt::Return(Some(expr)));
                } else {
                    return Ok(Stmt::Return(None));
                }
            }

            // Break: !
            Token::Bang => {
                // `!` at statement start = break (but could also be `!expr`)
                // If next token can start an expression, it's `!expr` (unary not).
                // But `!` at statement start by itself = break.
                // Actually, `!` is the break keyword at statement start.
                // From the test files: `!` is break only in loops.
                // `!expr` is boolean not. Let's look at the spec...
                // The break is `!` as a standalone statement (not followed by something
                // that could be operand of `!` in a useful statement way).
                // Actually, looking at AST: Stmt::Break is `!`. And `!expr` would be
                // an expression stmt with UnaryOp::Not.
                // We should check: is `!` followed by a newline/eof/rbrace? Then break.
                // Otherwise it's `!expr`.
                if matches!(self.peek_at(1), Token::Newline | Token::Eof | Token::RBrace) {
                    self.advance();
                    return Ok(Stmt::Break);
                }
                // Otherwise fall through to expression parsing (it's `!expr`)
            }

            // Continue: >!
            Token::GtBang => {
                self.advance();
                return Ok(Stmt::Continue);
            }

            // Tuple destructure: a b c = expr
            Token::Ident(_) if self.is_tuple_destructure() => {
                return self.parse_tuple_destructure();
            }

            // Map destructure: {a b c} = expr
            Token::LBrace if self.is_map_destructure() => {
                return self.parse_map_destructure();
            }

            // Array destructure: [h ..t] = expr
            Token::LBracket if self.is_array_destructure() => {
                return self.parse_array_destructure();
            }

            // Compound assignment: name op= expr
            Token::Ident(_) if self.is_compound_assign() => {
                return self.parse_compound_assign();
            }

            // Member/index assignment: name.field = expr, name[idx] = expr
            // or compound variants: name.field op= expr, name[idx] op= expr
            Token::Ident(_) if self.is_member_or_index_assign() => {
                if let Some(stmt) = self.try_member_index_assign()? {
                    return Ok(stmt);
                }
                // If it wasn't actually an assignment, fall through to expression parsing
            }

            // Simple assignment: name = expr or name:type = expr
            Token::Ident(_) if self.is_simple_assign() => {
                return self.parse_assign();
            }

            _ => {}
        }

        // Default: expression statement
        let expr = self.parse_expr()?;
        Ok(Stmt::Expr(expr))
    }

    fn parse_func_decl(&mut self) -> Result<Stmt, ParseError> {
        self.expect(&Token::Func)?; // consume `f`
        let name = match self.advance() {
            Token::Ident(s) => s,
            other => return Err(self.error(format!("expected function name, found {:?}", other))),
        };
        self.expect(&Token::LParen)?;
        let params = self.parse_params()?;
        self.expect(&Token::RParen)?;

        // Optional return type
        let ret_type = if matches!(self.peek(), Token::Colon) {
            self.advance();
            Some(self.parse_type()?)
        } else {
            None
        };

        // Body: `= expr` or `{ stmts }`
        let body = if matches!(self.peek(), Token::Eq) {
            self.advance();
            let expr = self.parse_expr()?;
            FuncBody::Expr(Box::new(expr))
        } else if matches!(self.peek(), Token::LBrace) {
            FuncBody::Block(self.parse_block()?)
        } else {
            return Err(self.error(format!(
                "expected '=' or '{{' after function params, found {:?}",
                self.peek()
            )));
        };

        Ok(Stmt::FuncDecl {
            name,
            params,
            ret_type,
            body,
        })
    }

    fn parse_params(&mut self) -> Result<Vec<Param>, ParseError> {
        let mut params = Vec::new();
        self.skip_newlines();
        while !matches!(self.peek(), Token::RParen | Token::Eof) {
            let variadic = if matches!(self.peek(), Token::DotDot) {
                self.advance();
                true
            } else {
                false
            };

            let name = match self.advance() {
                Token::Ident(s) => s,
                other => {
                    return Err(self.error(format!("expected parameter name, found {:?}", other)))
                }
            };

            // Optional type annotation
            let ty = if matches!(self.peek(), Token::Colon) {
                self.advance();
                Some(self.parse_type()?)
            } else {
                None
            };

            // Optional default value
            let default = if matches!(self.peek(), Token::Eq) {
                self.advance();
                Some(self.parse_expr()?)
            } else {
                None
            };

            params.push(Param {
                name,
                ty,
                default,
                variadic,
            });
            self.skip_newlines();
        }
        Ok(params)
    }

    fn parse_block(&mut self) -> Result<Vec<Stmt>, ParseError> {
        self.expect(&Token::LBrace)?;
        let mut stmts = Vec::new();
        self.skip_newlines();
        while !matches!(self.peek(), Token::RBrace | Token::Eof) {
            let stmt = self.parse_stmt()?;
            stmts.push(stmt);
            self.skip_newlines();
        }
        self.expect(&Token::RBrace)?;
        Ok(stmts)
    }

    fn parse_assign(&mut self) -> Result<Stmt, ParseError> {
        let name = match self.advance() {
            Token::Ident(s) => s,
            _ => unreachable!(),
        };

        // Check for type annotation
        let ty = if matches!(self.peek(), Token::Colon) {
            self.advance();
            Some(self.parse_type()?)
        } else {
            None
        };

        self.expect(&Token::Eq)?;
        let value = self.parse_expr()?;

        Ok(Stmt::Assign { name, ty, value })
    }

    fn parse_compound_assign(&mut self) -> Result<Stmt, ParseError> {
        let name = match self.advance() {
            Token::Ident(s) => s,
            _ => unreachable!(),
        };
        let op_tok = self.advance();
        let op = self.compound_op_to_binop(&op_tok);
        let value = self.parse_expr()?;
        Ok(Stmt::CompoundAssign { name, op, value })
    }

    fn parse_tuple_destructure(&mut self) -> Result<Stmt, ParseError> {
        let mut names = Vec::new();
        // Collect all identifiers until `=`
        while matches!(self.peek(), Token::Ident(_)) {
            match self.advance() {
                Token::Ident(s) => names.push(s),
                _ => unreachable!(),
            }
        }
        self.expect(&Token::Eq)?;
        let value = self.parse_expr()?;
        Ok(Stmt::TupleDestructure { names, value })
    }

    fn parse_map_destructure(&mut self) -> Result<Stmt, ParseError> {
        self.expect(&Token::LBrace)?;
        let mut names = Vec::new();
        self.skip_newlines();
        while matches!(self.peek(), Token::Ident(_)) {
            match self.advance() {
                Token::Ident(s) => names.push(s),
                _ => unreachable!(),
            }
            self.skip_newlines();
        }
        self.expect(&Token::RBrace)?;
        self.expect(&Token::Eq)?;
        let value = self.parse_expr()?;
        Ok(Stmt::MapDestructure { names, value })
    }

    fn parse_array_destructure(&mut self) -> Result<Stmt, ParseError> {
        self.expect(&Token::LBracket)?;
        self.skip_newlines();
        let head = match self.advance() {
            Token::Ident(s) => s,
            other => {
                return Err(self.error(format!(
                    "expected identifier in array destructure, found {:?}",
                    other
                )))
            }
        };
        self.skip_newlines();
        self.expect(&Token::DotDot)?;
        let tail = match self.advance() {
            Token::Ident(s) => s,
            other => {
                return Err(self.error(format!(
                    "expected identifier after .. in array destructure, found {:?}",
                    other
                )))
            }
        };
        self.skip_newlines();
        self.expect(&Token::RBracket)?;
        self.expect(&Token::Eq)?;
        let value = self.parse_expr()?;
        Ok(Stmt::ArrayDestructure { head, tail, value })
    }

    // ---------------------------------------------------------------
    // Type parsing
    // ---------------------------------------------------------------

    fn parse_type(&mut self) -> Result<TypeExpr, ParseError> {
        let base = self.parse_type_base()?;
        // Postfix `?` for optional
        if matches!(self.peek(), Token::Question) {
            self.advance();
            return Ok(TypeExpr::Optional(Box::new(base)));
        }
        Ok(base)
    }

    fn parse_type_base(&mut self) -> Result<TypeExpr, ParseError> {
        match self.peek().clone() {
            Token::Ident(ref s) => {
                let s = s.clone();
                self.advance();
                match s.as_str() {
                    "i" => Ok(TypeExpr::Prim(PrimType::Int)),
                    "f" => Ok(TypeExpr::Prim(PrimType::Float)),
                    "s" => Ok(TypeExpr::Prim(PrimType::Str)),
                    "b" => Ok(TypeExpr::Prim(PrimType::Bool)),
                    "a" => Ok(TypeExpr::Prim(PrimType::Any)),
                    "R" => {
                        // Result type: R(T)
                        self.expect(&Token::LParen)?;
                        let inner = self.parse_type()?;
                        self.expect(&Token::RParen)?;
                        Ok(TypeExpr::Result(Box::new(inner)))
                    }
                    "C" => {
                        // Channel type: C(T)
                        self.expect(&Token::LParen)?;
                        let inner = self.parse_type()?;
                        self.expect(&Token::RParen)?;
                        Ok(TypeExpr::Channel(Box::new(inner)))
                    }
                    "H" => {
                        // Handle type: H(T)
                        self.expect(&Token::LParen)?;
                        let inner = self.parse_type()?;
                        self.expect(&Token::RParen)?;
                        Ok(TypeExpr::Handle(Box::new(inner)))
                    }
                    _ if s.len() == 1 && s.chars().next().unwrap().is_ascii_uppercase() => {
                        // Type variable (single uppercase letter, not N which is Nil)
                        Ok(TypeExpr::Var(s))
                    }
                    _ => Err(self.error(format!("unknown type: {}", s))),
                }
            }
            Token::Nil => {
                self.advance();
                Ok(TypeExpr::Prim(PrimType::Nil))
            }
            Token::LBracket => {
                // Array type: [T]
                self.advance();
                let inner = self.parse_type()?;
                self.expect(&Token::RBracket)?;
                Ok(TypeExpr::Array(Box::new(inner)))
            }
            Token::LBrace => {
                // Map type: {T}
                self.advance();
                let inner = self.parse_type()?;
                self.expect(&Token::RBrace)?;
                Ok(TypeExpr::Map(Box::new(inner)))
            }
            Token::LParen => {
                // Tuple type: (T U V)
                self.advance();
                let mut types = Vec::new();
                while !matches!(self.peek(), Token::RParen | Token::Eof) {
                    types.push(self.parse_type()?);
                }
                self.expect(&Token::RParen)?;
                Ok(TypeExpr::Tuple(types))
            }
            Token::Backslash => {
                // Function type: \(T U):R
                self.advance();
                self.expect(&Token::LParen)?;
                let mut param_types = Vec::new();
                while !matches!(self.peek(), Token::RParen | Token::Eof) {
                    param_types.push(self.parse_type()?);
                }
                self.expect(&Token::RParen)?;
                self.expect(&Token::Colon)?;
                let ret = self.parse_type()?;
                Ok(TypeExpr::Func(param_types, Box::new(ret)))
            }
            _ => Err(self.error(format!("expected type, found {:?}", self.peek()))),
        }
    }

    // ---------------------------------------------------------------
    // Expression parsing — precedence climbing
    // ---------------------------------------------------------------

    fn parse_expr(&mut self) -> Result<Expr, ParseError> {
        self.parse_ternary()
    }

    /// Prec 0: Ternary `cond ? then : else`, pipes `|>`, filter `?>`, reduce `/>`,
    /// nil coalesce `??`, conditional return `cond?^val`, error propagation `expr?^`
    fn parse_ternary(&mut self) -> Result<Expr, ParseError> {
        let mut expr = self.parse_or()?;
